# zkvm

./: Cargo.toml  README.md
spec/: ZkVM.md
src/: encoding.rs  errors.rs  key.rs  lib.rs  ops.rs  point_ops.rs  predicate.rs  prover.rs  signature.rs  transcript.rs  tx.rs  types.rs  verifier.rs  vm.rs
