[package]
name = "zkvm"
version = "0.0.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache 2.0"
repository = "https://github.com/interstellar/zkvm"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A blockchain VM with cloaked transactions and zero-knowledge smart contracts"

[dependencies]
